--- a/templates/create.html
+++ b/templates/create.html
@@ -5,6 +5,7 @@
 <h1>{% block title %}xpire {% endblock %}</h1>
 <a href="/" class="linkButton">go to list</a>
 <form method="post">
+        <h4>Add an Item</h4>
         <label for="grocery">Grocery Item</label>
         <br>
         <input type="text" name="grocery"
