--- a/templates/remove.html
+++ b/templates/remove.html
@@ -6,25 +6,20 @@
 <a href="/" class="linkButton">go to list</a>
 
 <body>
-<select id="DropDownList">
-</select>
 
-<script type="text/javascript" language="javascript">
-   var x = myproducts();
-   var splitValues = x.split(",");
-   for (var i = 0; i < splitValues.length; i++) {
-      var opt = document.createElement("option");
-      // Add an Option object to Drop Down/List Box
-      document.getElementById("DropDownList").options.add(opt);
-      // Assign text and value to Option object
-      opt.text = splitValues[i];
-      opt.value = splitValues[i];
-   }
-</script>
-
- <p>{{ myproducts() }}</p>
-
-
+<body>
+	<div class="col-md-4">
+   <form method="post">
+	<h4>Which product would you like to remove?</h4>
+	<select class="dropMenu" name="dropSelection">
+      <option class="defaultDrop" value="" selected disabled hidden>select here</option>
+      {% for prod in myproducts %}
+      <option>{{prod}}</option>
+      {% endfor %}
+  </select>
+  <br><br>
+  <button type="submit" name = "removeSubmit" class="submit">submit</button>
+  </form>
   
 </body> 
 {% endblock %}
