--- a/templates/create.html
+++ b/templates/create.html
@@ -3,7 +3,11 @@
 
 {% block content %}
 <h1>{% block title %}xpire {% endblock %}</h1>
-<a href="/" class="linkButton">go to list</a>
+
+<div class="buttonCon">
+  <a href="/" class="linkButton">go back to list</a>
+  </div>
+
 <form method="post">
         <h4>Add an Item</h4>
         <label for="grocery">Grocery Item</label>
