--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 {% block content %}
     <h1 class="xpireTitle">{% block title %}xpire {% endblock %}</h1>
     <nav>
-      <a href="/create" class="linkButton">add a grocery item</a>
-            <a href="/remove" class="linkButton">remove a grocery item</a>
+      <a href="/create" class="linkButton">add a purchased grocery item</a>
+            <a href="/remove" class="linkButton">remove a completed grocery item</a>
       <a href="/expiry" class="linkButton">what's expiring soon?</a>
     </nav>
     
