--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,8 @@ html {
 
 nav {
   margin: auto;
+  margin-top: 1%;
+  margin-bottom: 1%;
   max-width: 70%;
   display: flex;
   justify-content: space-between;
@@ -135,7 +137,7 @@ form, input, .dropMenu
   width: 60%;
   border-radius: 4px;
   padding: 2%;
-  margin: 1px;
+  margin: auto;
   overflow: auto;
   margin-bottom:10px; 
   margin-top: 10px;
@@ -160,4 +162,10 @@ form, input, .dropMenu
 
 .defaultDrop {
   color: #757575;
+}
+
+.buttonCon {
+  text-align: center;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
